# llm-zoomcamp-volodymyr

./: main.py  pyproject.toml
HM/: homework01.ipynb  rag_hoemwork.py
