[project]
name = "zoomcamp-homeworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "minsearch>=0.1.0",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
    "toyaikit>=0.0.11",
]
